feat: java命令